test/vm/fails/read_fail.js

var test = 0;
delete(test);
test++;
